Fix styles and comment js

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <meta charset="utf-8">
 <title>HTMLarkdown</title>
 <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+  <script type="text/javascript" src="js/marked.min.js"></script>
 <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
   <div id="wrapper">
   <header>
-    <p id="description">Start typing and press <kbd>enter</kbd> to create a new list item</p>
+    <p id="description">Type <a target="_blank" href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">markdown</a> to generate HTML.</p>
   </header>
   <section id="main">
     <div id="input">
@@ -25,7 +26,6 @@
       <span id="notification">The HTML has been copied</span>
     </footer>
   </div>
-  <script type="text/javascript" src="js/marked.min.js"></script>
   <script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
