--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
   </header>
   <section id="main">
     <div id="input">
+      <h2 class="header">Markdown</h2>
       <textarea id="markdown" tabindex="1"></textarea>
     </div>
     <div id="output">
+      <h2 class="header">HTML</h2>
       <div contenteditable="true" id="result" tabindex="-1"></div>
     </div>
   </section>
