--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <title>HTMLarkdown</title>
 <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="js/marked.min.js"></script>
-<link href="css/styles.css" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet" type="text/css" />
+  <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
   <div id="wrapper">
