Change docs to daringfireball

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="wrapper">
   <header>
-    <p id="description">Type <a target="_blank" href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">markdown</a> to generate HTML.</p>
+    <p id="description">Type <a target="_blank" href="http://daringfireball.net/projects/markdown/basics">markdown</a> to generate HTML.</p>
     <div id="control">
         <input id="displayType" type="checkbox" checked="true">
     </div>
