--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>HTMLarkdown</title>
+  <script type="text/javascript" src="js/angular.min.js"></script>
   <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="js/marked.min.js"></script>
   <link href="css/styles.css" rel="stylesheet">
