Clear All button works

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
   </section>
     <footer>
-      <button id="clear" tabindex="-1">Clear all</button>
+      <button id="clear" tabindex="-1" ng-click="clearAll()">Clear all</button>
       <button id="copy" class="primary" tabindex="2">Copy HTML</button>
       <span id="notification">The HTML has been copied</span>
     </footer>
