--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </section>
     <footer>
       <button id="clear" tabindex="-1" ng-click="clearAll()">Clear all</button>
-      <button id="copy" class="primary" tabindex="2">Copy HTML</button>
+      <button id="copy" class="primary" tabindex="2" ng-click="copyToClipboard()">Copy HTML</button>
       <span id="notification">The HTML has been copied</span>
     </footer>
   </div>
