--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <section id="main">
       <div id="input">
-        <h2 class="header">Markdown</h2>
+        <h2 class="header" ng-click="console.log(htmlCopied)">Markdown</h2>
         <textarea id="markdown" tabindex="1" ng-keyup="updateHtml()" ng-model="markdown"></textarea>
       </div>
       <div id="output" ng-class="RAW ? 'raw' : 'pretty'">
@@ -29,7 +29,7 @@
     <footer>
       <button id="clear" tabindex="-1" ng-click="clearAll()">Clear all</button>
       <button id="copy" class="primary" tabindex="2" ng-click="copyToClipboard()">Copy HTML</button>
-      <span id="notification">The HTML has been copied</span>
+      <span id="notification" ng-show="htmlCopied" ng-class="{'fadeOut':htmlCopied}">The HTML has been copied</span>
     </footer>
   </div>
   <script type="text/javascript" src="js/app.js"></script>
