--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>HTMLarkdown</title>
   <script type="text/javascript" src="js/angular.min.js"></script>
   <script type="text/javascript" src="js/angular-sanitize.min.js"></script>
+  <script type="text/javascript" src="js/angular-messages.min.js"></script>
   <script type="text/javascript" src="js/marked.min.js"></script>
   <link href="css/styles.css" rel="stylesheet">
 </head>
@@ -27,9 +28,11 @@
       </div>
     </section>
     <footer>
-      <button id="clear" tabindex="-1" ng-click="clearAll()">Clear all</button>
+      <button id="clear" tabindex="-1" ng-click="handleClearAll()">Clear all</button>
       <button id="copy" class="primary" tabindex="2" ng-click="handleCopyClick()">Copy HTML</button>
-      <span id="notification" ng-show="htmlCopied" ng-class="{'fadeOut':htmlCopied}">The HTML has been copied</span>
+      <div id="notification" ng-messages="notifications">
+        <span ng-message="copied">The HTML has been copied</span>
+      </div>
     </footer>
   </div>
   <script type="text/javascript" src="js/app.js"></script>
