Fix async copyToHtml problem

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
     </section>
     <footer>
-      <button id="clear" tabindex="-1" ng-click="handleClearAll()">Clear all</button>
+      <button id="clear" tabindex="-1" ng-click="handleClearAllClick()">Clear all</button>
       <button id="copy" class="primary" tabindex="2" ng-click="handleCopyClick()">Copy HTML</button>
       <div id="notification" ng-messages="notifications">
         <span ng-message="copied">The HTML has been copied</span>
