--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   <div id="wrapper">
     <header>
       <p id="description">Type <a target="_blank" href="http://daringfireball.net/projects/markdown/basics">markdown</a> to generate HTML.</p>
-      <div id="control">
-        <input id="displayType" type="checkbox" checked="true" ng-model="RAW" ng-click="updateHtml()">
-      </div>
+      <resultswitch id="control"></resultswitch>
     </header>
     <section id="main">
       <div id="input">
